--- a/panel.html
+++ b/panel.html
@@ -44,9 +44,10 @@
         </button>
     </div>
     <div id="iframe-container">
-        <iframe id="tool-iframe" src="https://synclevel.com/tools/schema-architect/"></iframe>
+        <iframe id="tool-iframe" src="https://ai8v.github.io/schema5/tools/schema-architect/"></iframe>
     </div>
     <script src="assets/js/panel.js"></script>
 </body>
 
 </html>
+
